--- a/src/component/footer.css
+++ b/src/component/footer.css
@@ -115,7 +115,7 @@
 
 .infoetc a:hover {
    color: white;
-   border-bottom: 0.1vw solid white;
+   text-decoration: underline;
    width: fit-content;
 }
 
