--- a/src/component/facilitie.css
+++ b/src/component/facilitie.css
@@ -13,7 +13,7 @@
 
 .levelselect {
     display: flex;
-    justify-content: end;
+    justify-content:flex-end;
     margin-right: 10vw;
 }
 
@@ -118,7 +118,7 @@
     }
 }
 
-@media only screen and (max-width: 575px) {
+@media only screen and (max-width: 576px) {
     .textlv{
         top: 81vw;
         left: 8.3vw;
