--- a/src/component/new.css
+++ b/src/component/new.css
@@ -61,3 +61,37 @@
     background-color: #bf5c40;
     color: #fff;
 }
+
+@media only screen and (max-width: 992px) {
+    .images {
+        margin-left: 2vw;
+        margin-right: 2vw;
+    }
+    
+    .image {
+        margin-bottom: 5vw;
+        height: 50vw;
+    }
+    .image img {
+        width: 100%;
+        height: 35vw;
+        margin-bottom: 1vw;
+    }
+}
+
+@media only screen and (max-width: 576px) {
+    .images {
+        margin-left: 3vw;
+        margin-right: 3vw;
+    }
+    
+    .image {
+        margin-bottom: 5vw;
+        height: 70vw;
+    }
+    .image img {
+        width: 100%;
+        height: 45vw;
+        margin-bottom: 1vw;
+    }
+}
