--- a/src/component/slide.css
+++ b/src/component/slide.css
@@ -15,13 +15,16 @@
     margin-top: 8vw;
 }
 
+
 .main-carousel {
     position: relative;
     height: 36.5vw;
+    margin-left: 1.6vw;
 }
 
 .items {
     width: 64.5vw;
+    
 }
 
 .carousel-image {
@@ -61,3 +64,47 @@
     padding: 0.5vw;
 }
 
+@media only screen and (max-width: 991px) { 
+    .carousel-image {
+        width: 100%;
+        height: auto;
+       
+    }
+
+    .main-carousel {
+        width: 100%;
+        position: absolute;
+        top: 15vw;
+        margin-left: 0;
+    }
+
+    .texthid{
+        margin-top: 55vw;
+    }
+    
+    .buttons #prevBtn { 
+        top: 24vw;
+       
+    }
+    
+    .buttons #nextBtn {
+        top: 24vw;    
+      
+    }
+    
+}
+
+@media only screen and (max-width: 575px) { 
+
+    .texthid{
+        margin-top: 50vw;
+    }
+
+
+    .main-carousel {
+        width: 100%;
+        position: absolute;
+        top: 20vw;
+        margin-left: 0;
+    }
+}
